# virto-communities

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs  index.html  justfile
.github/workflows/: build-dev.yml  build-prod.yml  build.yml  ci.yml  deploy.yml
public/: main.css
public/css-out/: main.css
public/styles/: main.scss
src/: lib.rs  main.rs
src/components/atoms/: account.rs  action_request.rs  attach.rs  autocomplete.rs  autocomplete_item.rs  avatar.rs  badge.rs  bar.rs  button.rs  card.rs  card_skeleton.rs  card_vos.rs  checkbox.rs  checkbox_card.rs  combo_input.rs  dropdown.rs  dynamic_text.rs  file_drop_area.rs  icon_button.rs  input.rs  input_tags.rs  key_value.rs  management_method.rs  markdown.rs  mod.rs  notification.rs  payment_method.rs  popover_button.rs  radio_button.rs  request.rs  search_input.rs  step.rs  step_card.rs  subtitle.rs  switch.rs  tab.rs  textarea.rs  title.rs  tooltip.rs
src/components/atoms/icons/: add_line.rs  add_plus.rs  arrow.rs  arrow_left.rs  arrow_right.rs  arrow_right_up_line.rs  arrow_up.rs  arrow_up_down.rs  bank_card_line.rs  bank_line.rs  chat.rs  checkbox_circle_fill.rs  chevron_left.rs  chevron_right.rs  circle_check.rs  circle_shape.rs  close.rs  compass.rs  contacts_book_line.rs  currency_line.rs  dollar_money_circle.rs  dot.rs  download.rs  draggable.rs  edith_line.rs  file_line.rs  file_list_line.rs  filter.rs  global_line.rs  glyph.rs  hamburguer.rs  hand_coin_line.rs  home.rs  icon.rs  key_fill.rs  kusama_logo.rs  list_bullet.rs  medall_fill.rs  messages.rs  minus_circle.rs  (+36 more)
src/components/molecules/: action_request_list.rs  create_dao.rs  create_dao_button.rs  header.rs  invoice.rs  mod.rs  paginator.rs  sidebar.rs  tab.rs  tabs.rs
src/components/molecules/actions/: members.rs  mod.rs  transfer.rs  treasury.rs  voting.rs
src/components/molecules/initiative/: actions.rs  confirmation.rs  info.rs  mod.rs  settings.rs
src/components/molecules/onboarding/: basics.rs  checkout.rs  invite.rs  management.rs  mod.rs
src/components/molecules/treasury/: mod.rs
src/components/molecules/treasury/bill/: amount.rs  info.rs  mod.rs  payment_method.rs  recipient.rs  review.rs
src/components/molecules/treasury/invoice/: amount.rs  completed.rs  details.rs  mod.rs  payment_method.rs  recipient.rs  review.rs
src/components/molecules/treasury/send/: amount.rs  completed.rs  info.rs  mod.rs  payment_method.rs  recipient.rs  recipient_form.rs  recipient_select.rs  review.rs
src/hooks/: use_accounts.rs  use_attach.rs  use_bill.rs  use_communities.rs  use_connect_wallet.rs  use_deposit.rs  use_initiative.rs  use_invoice.rs  use_language.rs  use_location.rs  use_market_client.rs  use_notification.rs  use_onboard.rs  use_our_navigator.rs  use_paginator.rs  use_recipient.rs  use_recipients.rs  use_send.rs  use_session.rs  use_spaces_client.rs  use_startup.rs  use_tabs.rs  use_theme.rs  use_timestamp.rs  use_tooltip.rs  use_vote.rs  use_withdraw.rs
src/layouts/: authenticated.rs  onboard.rs  tabs.rs  user.rs
src/locales/: en-US.ftl  en-US.json  es-ES.ftl  es-ES.json
src/middlewares/: is_chain_available.rs  is_dao_owner.rs  is_signer_ready.rs
src/pages/: account.rs  bill.rs  custom.rs  dash.rs  dashboard.rs  deposit.rs  discover.rs  explore.rs  home.rs  initiative.rs  initiatives.rs  invoice.rs  login.rs  member.rs  onboarding.rs  payment.rs  plugins.rs  route.rs  send.rs  success.rs  treasury.rs  vos_intro.rs  vote.rs  withdraw.rs
src/services/bot/: client.rs  create.rs  get_by_alias.rs  get_by_id.rs  types.rs  upload.rs
src/services/kreivo/: balances.rs  check_name.rs  communities.rs  communities_manager.rs  community_memberships.rs  community_referenda.rs  community_track.rs  identity.rs  preimage.rs  system.rs  timestamp.rs
src/services/kusama/: balances.rs  system.rs  timestamp.rs
src/services/market/: client.rs  types.rs
src/services/pjs/: mod.rs
