[package]
name = "virto-communities"
version = "0.3.0"
authors = ["b-avb <brayan.vargas.dev@gmail.com>"]
edition = "2021"

[dependencies]

dioxus = { version = "0.6", features = ["web", "router"] }
dioxus-i18n = { git = "https://github.com/mrxiaozhuox/dioxus-i18n.git" }

wasm-bindgen = "0.2.99"
unic-langid = { version = "0.9.5", features = ["macros"] }
web-sys = { version = "0.3.69", features = [
    "Document",
    "Element",
    "HtmlElement",
    "HtmlBodyElement",
    "Node",
    "NodeList",
    "Window",
    "console",
    "CssStyleDeclaration",
    "Location",
    "Navigator",
    "DomRect",
    "ScrollToOptions"
] }
gloo = { version = "0.11.0", features = ["timers", "futures"] }
infer = "0.15.0"
mime = "0.3.17"
futures-util = "0.3.30"
uuid = { version = "1.8.0", features = ["v4"] }

sube = { package = "sube", git = "https://github.com/virto-network/virto-sdk.git", branch = "main", default-features = false, features = [
    "js",
    "wss",
] }

pjs = { package = "pjs", git = "https://github.com/virto-network/virto-sdk.git", branch = "feat/pjs-vault", default-features = false }
libwallet = { package = "libwallet", git = "https://github.com/virto-network/virto-sdk.git", branch = "main", default-features = false, features = [
    "substrate",
    "mnemonic",
    "rand",
] }

codec = { version = "3.1.2", package = "parity-scale-codec", default-features = false }
rand_core = "0.6.4"
serde = "1.0.197"
serde_json = "1.0.114"
hex = "0.4.3"
wasm-bindgen-futures = "0.4.42"
sp-core = { version = "34.0.0", default-features = false, features = ["serde"] }
reqwest = { version = "0.12.4", features = ["multipart", "json"] }
pulldown-cmark = "0.11.0"
blake2 = "0.10.6"
chrono = "0.4.38"
manganis = "0.6.0"

[patch.crates-io]
cookie = { git = "https://github.com/S0c5/cookie-rs.git" }

[build-dependencies]
grass = "0.13.2"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
